# OpenGL_Playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
include/: utils.h
src/: main.cpp  utils.cpp
src/HelloTriangles/: HelloTriangles.cpp  HelloTriangles.h
src/HelloTriangles/shader/: shader.vert
src/shader/: shader.frag
